add passport auth based on jwt for both server-side and SPA

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(lang="en")
     #wrap
       .container
         h1.page-header= appTitle
-        h5.lead — JavaScript全栈开发
+        //- h5.lead — JavaScript全栈开发
         block page
         block header
           div
