--- a/views/login.pug
+++ b/views/login.pug
@@ -12,4 +12,6 @@ block content
         p
           input.form-control(name="password", type="password", placeholder="请输入密码")
         p
-          button.btn.btn-lg.btn-primary.btn-block(type="submit") 登陆
+          button.btn.btn-lg.btn-success.btn-block(type="submit") 登陆
+    //- div
+    //-   a(href='/auth/facebook') Login with Facebook account
