--- a/app_client/views/article.view.client.html
+++ b/app_client/views/article.view.client.html
@@ -1,25 +1,37 @@
+<style media="screen">
+	.label {
+		margin-right: 2px;
+	}
+	h5 {
+		/*margin-top: 10px;*/
+	}
+	.content {
+		font-size: 21px;
+		font-family: sans-serif;
+	}
+	.page-header {
+		font-family: sans-serif;
+		font-size: 40px;
+	}
+</style>
 <div class="container">
-	<div class="page-header">{{article.title}}</div>
+
+	<h5 class="clearfix">
+		<small class="">发表于：{{article.createdOn | date: "yyyy-MM-dd HH:mm:ss"}}</small>
+	</h5>
+	<h4 class="clearfix">
+		<span class="label label-success" ng-repeat="tag in article.tags">{{tag}}</span>
+	</h4>
+	<h3 class="page-header">{{article.title}}</h3>
+	<p class="content">
+			{{article.content}}
+	</p>
 	<div class="row">
-		<div class="col-xs-12 col-md-12">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6">
-					<span class="label label-warning label-facility" ng-repeat="tag in article.tags">
-						{{tag}};
-					</span>
-					<small class="pull-right">发表于：{{article.createdOn}}</small>
-				</div>
-			</div>	
-		</div>
-		<div class="col-xs-12 col-md-12">
-			{{article.articleBody}}
-			<!-- <p ng-bind-html="article.articleBody"></p> -->
-		</div>
-	</div>
-	<div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 comments-wrapper">
             <div class="panel panel-primary review-panel">
-	            <div class="panel-heading"><a ng-click="popupCommentModal()" class="btn btn-success pull-right">添加评论</a>
+	            <div class="panel-heading">
+								<a ng-show="isLoggedIn" ng-click="popupCommentModal()" class="btn btn-success pull-right">添加评论</a>
+								<a ng-show="!isLoggedIn" class="btn btn-warning pull-right">注册&nbsp;|&nbsp;登陆后可添加评论</a>
 	            	<h2 class="panel-title">相关评论</h2>
 	            </div>
 	            <div class="panel-body review-container">
