--- a/app_client/views/comment.view.client.html
+++ b/app_client/views/comment.view.client.html
@@ -6,12 +6,12 @@
     </div>
     <div class="modal-body">
       <div role="alert" ng-show="Error" class="alert alert-danger">{{ Error }}</div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="name" class="col-xs-2 col-sm-2 control-label">名称</label>
         <div class="col-xs-10 col-sm-10">
           <input id="name" name="author" ng-model="comment.author" class="form-control"/>
         </div>
-      </div>
+      </div> -->
       <div class="form-group">
         <label for="review" class="col-sm-2 control-label">评论</label>
         <div class="col-sm-10">
