解决JWT授权中文乱码问题

--- a/public/spa_client/views/home.view.client.html
+++ b/public/spa_client/views/home.view.client.html
@@ -1,6 +1,6 @@
 <!-- <navigation></navigation> -->
 <div class="banner home-banner">
-	<img src="img/uploads/homepageBanner.jpeg" />
+	<img src="img/homepageBanner.jpeg" />
 	<div class="banner-content">
 		<div class="container">
 			<span class="title">叩首问路 码梦为生</span>
