--- a/public/spa_client/views/login.view.client.html
+++ b/public/spa_client/views/login.view.client.html
@@ -1,6 +1,6 @@
 <div class="container log-in-container">
   <!-- <page-header content="pageHeader"></page-header> -->
-  
+  <!-- {{credentials}} -->
   <div class="row">
     <div class="col-md-6 col-sm-8">
       <p class="lead">新用户？ <a href="/register?page={{returnPage }}">注册</a>后可发表评论。</p>
@@ -8,11 +8,11 @@
         <div role="alert" ng-show="formError" class="alert alert-danger">{{formError}}</div>
         <div class="form-group">
           <label for="email">电子邮箱</label>
-          <input type="email" class="form-control" id="email" placeholder="电子邮箱" ng-model="credentials.email">
+          <input type="email" class="form-control" id="email" placeholder="电子邮箱" ng-required="true" ng-model="credentials.email">
         </div>
         <div class="form-group">
           <label for="password">密码</label>
-          <input type="password" class="form-control" id="password" placeholder="密码" ng-model="credentials.password">
+          <input type="password" class="form-control" id="password" placeholder="密码" ng-required="true" ng-model="credentials.password">
         </div>
         <button type="submit" class="btn btn-default">登录！</button>
       </form>
